@@ -1,5 +1,10 @@
 2016-09-30  Natalia Portillo  <claunia@claunia.com>
 
+	* NDIF.cs:
+	* UDIF.cs: Add support for ADC compressed images.
+
+2016-09-30  Natalia Portillo  <claunia@claunia.com>
+
 	* NDIF.cs: Fail on StuffIt compressed images.
 
 2016-09-30  Natalia Portillo  <claunia@claunia.com>
